fix sidebar overflow

--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,7 @@ body {
   flex-direction: column;
   padding: 1rem;
   gap: 1rem;
+  overflow: auto;
 }
 
 .title {
